<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/invitationsBN"
        android:enabled="true"
        android:icon="@drawable/invitations_24"
        android:title="@string/invitationsBNT"/>
    <item
        android:id="@+id/eventsBN"
        android:enabled="true"
        android:icon="@drawable/my_events_24"
        android:title="@string/eventsBNT"/>
    <item
        android:id="@+id/localsBN"
        android:enabled="true"
        android:icon="@drawable/locals_24"
        android:title="@string/localsBNT" />
    <item
        android:id="@+id/profileBN"
        android:enabled="true"
        android:icon="@drawable/profile_24"
        android:title="@string/profileBNT" />
</menu>